added ephemeral workers
